# ai-business-asistant

./: .coveragerc  .env.development  .env.example  .env.production  .env.testing  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_README.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  CRITICAL_FIXES.md  DEPLOYMENT.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.worker  LICENSE  MAJOR_IMPROVEMENTS.md  Makefile  PERFORMANCE_IMPROVEMENTS_2024.md  PERFORMANCE_ISSUES.md  PRODUCTION_READINESS_PLAN.md  QUICKSTART.md  QUICK_FIX.md  QUICK_START.md  README.md  README_RU.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_2024.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  WEB_APP_PROGRESS.md  WEB_APP_README.md  WINDOWS_GUIDE.md  add_role_field_migration.py  (+37 more)
.github/workflows/: ci-cd.yml
alembic/: README.md  env.py
alembic/versions/: 001_initial_schema.py  002_add_role_field.py  003_add_web_user_fields.py  004_add_performance_indexes.py  add_role_field_to_users.py
analytics/: __init__.py  stats.py
api/: __init__.py  dependencies.py  main.py
api/middleware/: error_handler.py
api/models/: __init__.py  auth.py  chat.py  documents.py  settings.py
api/routes/: analytics.py  auth.py  chat.py  documents.py  settings.py  tools.py
config/: __init__.py  ai_personas.py  constants.py  i18n.py  settings.py
database/: crud.py  database.py  models.py
docs/: APPLY_UPDATES.md  FEATURES_DEMO.md  FIX_ERRORS.md  FIX_WARNINGS.md  GIT_WORKFLOW.md  HOW_TO_START.md  IMPROVEMENT_PLAN.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  MULTILINGUAL_GUIDE.md  ROADMAP.md  START_HERE.md  TOP_10_IMPROVEMENTS.md  UPGRADE_SUMMARY.md  WEB_APP_IMPROVEMENT_PLAN.md  WINDOWS_SETUP.md
export/: __init__.py  pdf_export.py  visualization.py
handlers/: common.py  common_enhanced.py  developer_handlers.py  documents.py  export_handlers.py  messages.py  reply_keyboard_handler.py  tasks.py.old
middleware/: __init__.py  rate_limiter.py
monitoring/: README.md  alerts.yml  grafana_dashboard.json  prometheus.yml
nginx/: nginx.conf
postgres_data/: postmaster.pid
postgres_data/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres_data/base/16384/: 2619
postgres_data/base/5/: pg_internal.init
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
redis_data/: dump.rdb
scripts/: README.md  apply_improvements.py  check_dependencies.py  check_models.py  cleanup_project.py  migrate.py  migrate_db.py  migrate_documents.py  postgres-backup.sh
services/: __init__.py  llm_service.py  rbac.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_bot_flow.py
tests/integration/: __init__.py  test_celery_tasks.py  test_document_handlers.py
tests/unit/: __init__.py  test_ai_helpers.py  test_crud.py  test_file_validators.py  test_models.py  test_rate_limiter.py  test_security.py  test_validators.py
ui/: __init__.py  advanced_keyboards.py  developer_keyboards.py  formatters.py  keyboards.py  messages.py  reply_keyboards.py
utils/: __init__.py  ai_helpers.py  cache.py  developer_tools.py  document_ai_processor.py  error_handlers.py  file_validators.py  free_apis.py  health_check.py  logger.py  metrics.py  pagination.py  performance.py  security.py  user_utils.py  validators.py
web-app/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-app/public/: index.html
web-app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web-app/src/api/: client.ts
web-app/src/components/: ErrorBoundary.tsx
web-app/src/contexts/: ThemeContext.tsx
web-app/src/hooks/: useErrorHandler.ts  useLoading.ts  useRetry.ts
web-app/src/pages/: AnalyticsPage.tsx  ChatPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PremiumPage.tsx  ServerErrorPage.tsx  SettingsPage.tsx
web-app/src/store/: index.ts
web-app/src/theme/: index.ts
web-app/src/types/: index.ts
(+30 files in other folders)
