[tool.poetry]
name = "ai-business-assistant"
version = "2.0.0"
description = "AI-powered business intelligence assistant with document analysis, multi-format support, and web interface"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-username/ai-business-asistant"
repository = "https://github.com/your-username/ai-business-asistant"
keywords = ["ai", "telegram-bot", "document-analysis", "gemini", "business-intelligence"]

[tool.poetry.dependencies]
python = "^3.10"

# Core Bot
python-telegram-bot = "^21.1.1"
python-dotenv = "^1.0.1"

# AI Model
google-generativeai = "^0.5.4"
openai = "^1.12.0"

# Database
SQLAlchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

# Async Tasks
celery = "^5.4.0"
redis = "^5.0.4"

# Data Processing
PyMuPDF = "^1.24.1"
pydub = "^0.25.1"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
python-docx = "^1.1.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"

# Visualization & Export
matplotlib = "^3.8.3"
reportlab = "^4.1.0"
Pillow = "^10.2.0"

# Security & Validation
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-magic = "^0.4.27"
python-magic-bin = {version = "^0.4.14", markers = "platform_system == 'Windows'"}
email-validator = "^2.1.0"

# REST API
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
slowapi = "^0.1.9"

# Utilities
tenacity = "^8.2.3"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
sentry-sdk = "^1.40.0"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
faker = "^22.6.0"

# Code Quality
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pylint = "^3.0.0"

# Development Tools
ipython = "^8.20.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | postgres_data
  | redis_data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=html --cov-report=term"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/postgres_data/*",
    "*/redis_data/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "telegram.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100
